linux: Properly detect bluetooth mice and keyboards that are HID devices

https://bugs.freedesktop.org/show_bug.cgi?id=90222